# beman-submodule

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pre-commit-check.yml  publish.yml
beman_submodule/: __init__.py  cli.py
beman_submodule/lib/: core.py
tests/: test_beman_submodule.py
