[project]
name = "beman-submodule"
version = "0.1.0"
description = "A pseudo-submodule tool for vendoring Git repositories in Beman projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "The Beman Project", email = "eddiejnolan@gmail.com" }]
dependencies = []
keywords = [
    "beman",
    "bemanproject",
    "git",
    "submodule",
    "vendoring",
    "cli tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/bemanproject/beman-submodule"
Repository = "https://github.com/bemanproject/beman-submodule"
Issues = "https://github.com/bemanproject/beman-submodule/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = ["pytest>=8.4.0", "ruff>=0.11.13"]

[project.scripts]
beman-submodule = "beman_submodule.cli:main"

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
